updated html and css header, navbar, and image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-~<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,20 @@
     <title>Georgia Van Schie</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navbar">
+            <div>
+            <li>home</li> 
+            <li>about</li> 
+            <li>projects</li>
+            <li>contact</li>
+            </div>
+        </nav>
+         <img class=photo src="./portfolio.jpg"alt="">
+      </header>
+    <section>
+
+    <h2>portfolio</h2>
+    </section>
 </body>
 </html>
