updated navbar,logo and header

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar">
-            <div>
-            <li>home</li> 
-            <li>about</li> 
-            <li>projects</li>
-            <li>contact</li>
-            </div>
+        <div class="container"> 
+            <img class=photo src="./portfolio.jpg"alt="logo" class="logo">
+        <nav 
+            <ul>
+                <li>home</li> 
+                <li>about</li> 
+                <li>projects</li>
+                <li>contact</li>
+            </ul>
         </nav>
-         <img class=photo src="./portfolio.jpg"alt="">
+        </div>
+        
+         
       </header>
     <section>
 
