--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             
             <ul class="nav">
                 <li>
-                <a href="#">Home</a>
+                <a href="#Home">Home</a>
             </li> 
             <li>
-                <a href="#">About</a>
+                <a href="#About">About</a>
             </li> <li>
-                <a href="#">Contact</a>
+                <a href="#Contact">Contact</a>
                 <li>
-                 <a href="#">Work</a>
+                 <a href="#Work">Work</a>
                 </li> 
             </li>
             </ul>
@@ -38,23 +38,25 @@
 </section>
 </header>
 
-    <section class="boxes" id="work"> 
+    <section class="boxes" id="Home"> 
         <div class="container">
 
-            <div class="box">
+            <div class="box" id="Work">
                 <h2>Horiseon Project </h2>
                     <P>Improved accessibilty for the Horiseon marketing webiste by refactoring code, adding alt attributes to images and re-organising headings.</P>
+                    <a href="https://georgiavans.github.io/Horiseon-Project/" target="_blank">
                     <img class="hr-image" src="website screenshot.png" alt="Horiseon-project">
+                   </a>
             </div>
 
-            <div class="About">
+            <div class="About" id="About">
                 <h2>About</h2>
                 <P>My name is georgia Ray Van Schie, and I am originally from Vancouver Island. I love most outdoor activities like surfing, skiing and hiking. Im currently studying Web Development and accumulating skills to eventually work in the tech industry!</P>
             </div>
         </div>
     </section>    
 
-            <section class="contact">
+            <section class="contact" id="Contact">
              <div class="contact-box">
                     <div class="contact-left">
                         <h1>Contact Form</h1>
