added git food project

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
                     <img class="hr-image" src="website screenshot.png" alt="Horiseon-project">
                    </a>
             </div>
-
+            <div class="box1" id="Work">
+                <h2>Git-Food Application Group Project </h2>
+                    <P>Git food is an application Myself, Mathew Gracie, Trina Snooks and Maricar Martin built.This app allows users to search nearby cuisine options as well as see the current local weather forecast.</P>
+                    <a href="https://maricarmartin.github.io/Git-Food/" target="_blank">
+                    <img class="hr-image" src="git food screenshot.png" alt="Git-Food">
+                   </a>
+            </div>
             <div class="About" id="About">
                 <h2>About</h2>
                 <P>My name is georgia Ray Van Schie, and I am originally from Vancouver Island. I love most outdoor activities like surfing, skiing and hiking. Im currently studying Web Development and accumulating skills to eventually work in the tech industry!</P>
